--- a/_config.yml
+++ b/_config.yml
@@ -29,12 +29,9 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
 
-# Build settings
-plugins:
-  - jekyll-feed
-
 sass:
   sass_dir: assets/css
+  style: compressed
 
 # Exclude from processing.
 # The following items will not be processed, by default.
