add privacy, imprint, mission, community, consor

--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ defaults:
       path: ""
       type: "news"
     values:
-      layout: "single"
+      layout: "news-item"
 
 # Exclude from processing.
 # The following items will not be processed, by default.
