--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,9 @@ jobs:
         node-version: '12'
     - name: install sass
       run: npm install -g sass
-    - name: Restore tools
+    - name: install node modules
+      run: npm install
+    - name: Restore dotnet tools
       run: dotnet tool restore
     - name: Build
       working-directory: ./src
