--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "liveServer.settings.port": 5501
+    "liveServer.settings.port": 5501,
+    "FSharp.inlayHints.disableLongTooltip": true,
+    "editor.inlayHints.enabled": "offUnlessPressed"
 }
