--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "homepage": "https://github.com/nfdi4plants/nfdi4plants.github.io#readme",
   "dependencies": {
-    "@nfdi4plants/web-components": "^0.4.0-beta08",
+    "@nfdi4plants/web-components": "^0.5.0",
     "bulma": "^0.9.2"
   },
   "devDependencies": {
