spell-checks and formatting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "liveServer.settings.port": 5501,
     "FSharp.inlayHints.disableLongTooltip": true,
-    "editor.inlayHints.enabled": "offUnlessPressed"
+    "editor.inlayHints.enabled": "offUnlessPressed",
+    "cSpell.language": "de,en-GB"
 }
