--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,10 +20,12 @@ jobs:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - name: Checkout
       uses: actions/checkout@v3
+
     - name: Setup .NET 3.1
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.1.301
+
     - name: Setup .NET 5
       uses: actions/setup-dotnet@v1
       with:
@@ -42,6 +44,9 @@ jobs:
 
     - name: Restore dotnet tools
       run: dotnet tool restore
+
+    - name: Restore dependencies
+      run: dotnet paket install
 
     - name: Build
       working-directory: ./src
