--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,12 @@ name: deploy-gh-pages
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ main ]
+    branches: [ "main" ]
+
+  # triggers when "update-dependencies" is completed
+  workflow_run:
+    workflows: [update-dependencies]
+    types: [completed]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -44,9 +49,6 @@ jobs:
 
     - name: Restore dotnet tools
       run: dotnet tool restore
-
-    - name: Restore dependencies
-      run: dotnet paket install
 
     - name: Build
       working-directory: ./src
