--- a/.github/workflows/update-dependencies.yml
+++ b/.github/workflows/update-dependencies.yml
@@ -6,7 +6,7 @@ name: update-dependencies
 on:
   # Triggers the workflow at 20pm thursday (depends on timezone) (0 18 * * THU)
   schedule:
-    - cron: '0 21 * * *'
+    - cron: '0 21 * * THU'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
