--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
     "type": "git",
     "url": "git+https://github.com/nfdi4plants/nfdi4plants.github.io.git"
   },
+  "scripts": {
+    "bundle": "rollup --config rollup.config.js",
+    "updatecomponents": "npm install @nfdi4plants/web-components@latest",
+    "postupdatecomponents": "npm run bundle",
+    "fornax": "cd ./src && dotnet fornax watch"
+  },
   "bugs": {
     "url": "https://github.com/nfdi4plants/nfdi4plants.github.io/issues"
   },
   "homepage": "https://github.com/nfdi4plants/nfdi4plants.github.io#readme",
   "dependencies": {
-    "@nfdi4plants/web-components": "^0.11.0",
+    "@nfdi4plants/web-components": "^1.0.1",
     "bulma": "^0.9.2"
   },
   "devDependencies": {
