--- a/.github/ISSUE_TEMPLATE/publication.yml
+++ b/.github/ISSUE_TEMPLATE/publication.yml
@@ -1,5 +1,5 @@
 name: Add publication
-description: Add a DataPLANT publication.
+about: Add a DataPLANT publication.
 title: "[Add publication]: "
 assignees:
   - fstein88
