--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/tailwind": "^5.1.1",
     "@nfdi4plants/web-components": "^1.2.3",
     "astro": "^4.15.9",
+    "bibtex-js-parser": "^1.1.6",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-slug": "^6.0.0",
     "remark-directive": "^3.0.0",
