--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "astro": "^4.15.9",
     "astro-icon": "^1.1.1",
     "bibtex-js-parser": "^1.1.6",
+    "glob": "^11.0.0",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-slug": "^6.0.0",
     "remark-directive": "^3.0.0",
