--- a/package.json
+++ b/package.json
@@ -18,15 +18,24 @@
     "astro": "^4.15.9",
     "astro-icon": "^1.1.1",
     "bibtex-js-parser": "^1.1.6",
+    "csv-parse": "^5.5.6",
+    "d3": "^7.9.0",
     "glob": "^11.0.0",
+    "jsdom": "^25.0.1",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-slug": "^6.0.0",
     "remark-directive": "^3.0.0",
     "tailwindcss": "^3.4.13",
+    "topojson-client": "^3.1.0",
+    "topojson-server": "^3.0.1",
     "typescript": "^5.6.2"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
+    "@types/d3": "^7.4.3",
+    "@types/jsdom": "^21.1.7",
+    "@types/topojson-client": "^3.1.5",
+    "@types/topojson-server": "^3.0.4",
     "daisyui": "^4.12.10",
     "tailwind-merge": "^2.5.2"
   }
