--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,14 @@
     "allowJs": true,
     "baseUrl": ".",
     "paths": {
-      "~/*": ["src/*"]
-    }
+      "~/*": [
+        "src/*"
+      ]
+    },
+    "jsx": "react-jsx",
+    "jsxImportSource": "react"
   },
-  "exclude": ["dist/"]
+  "exclude": [
+    "dist/"
+  ]
 }
