--- a/.github/ISSUE_TEMPLATE/participant.yml
+++ b/.github/ISSUE_TEMPLATE/participant.yml
@@ -6,9 +6,7 @@ body:
     id: type
     attributes:
       label: Type
-       options:
-        - participant
-        - project
+      options: ["participant", "project"]
     validations:
       required: true
   - type: input
