--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "typescript": "^5.6.2"
   },
   "devDependencies": {
+    "@iconify/react": "^5.0.2",
     "@tailwindcss/typography": "^0.5.15",
     "@types/d3": "^7.4.3",
     "@types/jsdom": "^21.1.7",
