polish issue template

--- a/.github/ISSUE_TEMPLATE/event.yml
+++ b/.github/ISSUE_TEMPLATE/event.yml
@@ -1,5 +1,5 @@
 name: Add event
-description: Add an event (e.g. workshop, training or demo) to be listed on the [DataPLANT events site](https://nfdi4plants.org/events/).
+description: Add an event (e.g. workshop, training or demo) to be listed on the [DataPLANT events site](https://nfdi4plants.org/events/). Please check out the [contribution guide](https://github.com/nfdi4plants/nfdi4plants.github.io/blob/main/CONTRIBUTING.md#events) for more details
 title: "[Add event]: "
 body:
   - type: input
@@ -9,9 +9,9 @@ body:
     validations:
       required: true
   - type: input
-    id: description
+    id: excerpt
     attributes:
-      label: Description
+      label: Excerpt
       description: Max. 200 signs.
     validations:
       required: true
@@ -33,17 +33,19 @@ body:
         - Webinar
         - Training
         - Meeting
+    validations:
+      required: true
   - type: dropdown
     id: audience
     attributes:
-      label: audience
+      label: Audience
       options:
         - Users
         - Data Stewards
         - Developers
       multiple: true
     validations:
-      required: false
+      required: True
   - type: dropdown
     id: recurrence
     attributes:
@@ -54,6 +56,8 @@ body:
         - Series
       description: |
         Single = one-time event; Series = multiple-session event planned for non-consecutive days; Periodic = regularily repeating (e.g. Data Steward Circle)
+    validations:
+      required: true
   - type: textarea
     id: when
     attributes:
@@ -95,7 +99,7 @@ body:
           affiliation: DataPLANT
           url: https://www.nfdi4plants.org
     validations:
-      required: true
+      required: false
   - type: textarea
     id: tutors
     attributes:
